--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html lang='en'>
   <head>
+    <title> anusha </title>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
   </head>
   <body>
-
+    <h1>Hello, Pluralsight!</h1>
+    <ul>
+      <li>Design apps</li>
+      <li>Make my own website</li>
+      <li>Python</li>
+      <li>Angular</li>
+    </ul>
   </body>
 </html>
